@@ -1,3 +1,7 @@
+* Support for ARM64 plugins.
+* macOS: Fix centering issue when starting FS-UAE on hi-dpi displays.
+* macOS: Build script support for macOS M1/ARM64 builds.
+
 * Make sure initial window position is not stored as 0, 0.
 * Allow overriding kickstart ROM file again.
 * Ask to "upgrade" (install) FS-UAE / QEMU-UAE / CAPSImg if not installed.
